tests/NormalTests/paczka1/fuzzy1/29939090.err
Error in line 2: W7n3GBeX S720 76,2
Error in line 20: S151 S720 6,0
Error in line 27: gU9 S151 14,1
Error in line 30: gU9 A834 53,5
